--- a/css/styles.css
+++ b/css/styles.css
@@ -626,7 +626,8 @@ z-index: 100;
 width: 100%;
 height: 100%;
 background: rgba(0, 0, 0, 0.2);
-transition: opacity 250ms var(--transition-timing-function), visibility 250ms var(--transition-timing-function);
+transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+/* transition: opacity 250ms var(--transition-timing-function), visibility 250ms var(--transition-timing-function); */
    }
 .backdrop.is-hidden{
   opacity: 0;
@@ -642,9 +643,10 @@ transition: opacity 250ms var(--transition-timing-function), visibility 250ms va
   width: 528px;
   height: 581px;
   background-color: #FFFFFF;
+  /* transition: 250ms cubic-bezier(0.4, 0, 0.2, 1); */
   /* box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px; */
-  transition: opacity 250ms var(--transition-timing-function), visibility 250ms var(--transition-timing-function);
+  /* transition: opacity 250ms var(--transition-timing-function), visibility 250ms var(--transition-timing-function); */
 }   
 
 .modal-close-btn{
@@ -660,6 +662,8 @@ transition: opacity 250ms var(--transition-timing-function), visibility 250ms va
   background-color: #FFFFFF;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 .modal-close-btn-icon {
   position: absolute;
@@ -668,6 +672,7 @@ transition: opacity 250ms var(--transition-timing-function), visibility 250ms va
   right: 15px;
   width: 18px;
   height: 18px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-btn:hover,
 .modal-close-btn:focus{
